--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-   <meta charset="UTF-8">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hani Allam – Lohnbuchhalter & Fachassistent Lohn und Gehalt (in Weiterbildung)</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Hani Allam – Lohnbuchhalter & Fachassistent Lohn und Gehalt</title>
     <style>
-
         * {
             margin: 0;
             padding: 0;
@@ -650,7 +649,7 @@
     <section class="hero" id="home">
         <div class="hero-content">
             <h1>Hani Allam</h1>
-            <p class="subtitle">Lohnbuchhalter & Fachassistent Lohn und Gehalt</p>
+            <p class="subtitle">Lohnbuchhalter & Fachassistent Lohn und Gehalt (in Weiterbildung)</p>
             <p class="description">Präzision, Zuverlässigkeit und Leidenschaft für die Lohn- und Gehaltsabrechnung. Mit fundierter Berufserfahrung und kontinuierlicher Weiterbildung sorge ich für korrekte und termingerechte Abrechnungen.</p>
             <div class="hero-cta">
                 <a href="#contact" class="btn">Kontakt aufnehmen</a>
