--- a/index.html
+++ b/index.html
@@ -751,14 +751,14 @@
                         <div class="contact-icon">📧</div>
                         <div class="contact-details">
                             <h3>E-Mail</h3>
-                            <p>ihre.email@beispiel.de</p>
+                            <p>haniallam@outlook.com</p>
                         </div>
                     </div>
                     <div class="contact-item">
                         <div class="contact-icon">📱</div>
                         <div class="contact-details">
                             <h3>Telefon</h3>
-                            <p>+49 123 456789</p>
+                            <p>+49 15752575094</p>
                         </div>
                     </div>
                     <div class="contact-item">
@@ -769,21 +769,7 @@
                         </div>
                     </div>
                 </div>
-                <form class="contact-form" onsubmit="handleSubmit(event)">
-                    <div class="form-group">
-                        <label for="name">Ihr Name</label>
-                        <input type="text" id="name" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="email">Ihre E-Mail-Adresse</label>
-                        <input type="email" id="email" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="message">Ihre Nachricht</label>
-                        <textarea id="message" required></textarea>
-                    </div>
-                    <button type="submit">Nachricht senden</button>
-                </form>
+               
             </div>
         </div>
     </section>
