--- a/index.html
+++ b/index.html
@@ -398,32 +398,29 @@
             box-shadow: 0 10px 40px var(--shadow);
         }
 
-        .contact-grid {
-            display: grid;
-            grid-template-columns: 1fr 1.5fr;
-            gap: 60px;
-        }
-
         .contact-info {
-            display: flex;
-            flex-direction: column;
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
             gap: 25px;
+            justify-items: center;
         }
 
         .contact-item {
             display: flex;
             align-items: flex-start;
             gap: 20px;
-            padding: 20px;
+            padding: 25px;
             background: var(--light);
             border-radius: 10px;
             transition: all 0.3s;
+            width: 100%;
+            max-width: 350px;
         }
 
         .contact-item:hover {
             background: var(--primary);
             color: white;
-            transform: translateX(5px);
+            transform: translateY(-5px);
         }
 
         .contact-icon {
@@ -455,65 +452,6 @@
 
         .contact-item:hover .contact-details p {
             color: white;
-        }
-
-        .contact-form {
-            display: flex;
-            flex-direction: column;
-            gap: 20px;
-        }
-
-        .form-group {
-            display: flex;
-            flex-direction: column;
-            gap: 8px;
-        }
-
-        .form-group label {
-            font-weight: 600;
-            color: var(--dark);
-            font-size: 0.95rem;
-        }
-
-        .contact-form input,
-        .contact-form textarea {
-            width: 100%;
-            padding: 14px;
-            border: 2px solid #e2e8f0;
-            border-radius: 8px;
-            font-size: 1rem;
-            font-family: inherit;
-            transition: all 0.3s;
-        }
-
-        .contact-form input:focus,
-        .contact-form textarea:focus {
-            outline: none;
-            border-color: var(--primary);
-            box-shadow: 0 0 0 3px rgba(37, 99, 235, 0.1);
-        }
-
-        .contact-form textarea {
-            min-height: 150px;
-            resize: vertical;
-        }
-
-        .contact-form button {
-            background: var(--primary);
-            color: white;
-            padding: 16px 32px;
-            border: none;
-            border-radius: 8px;
-            cursor: pointer;
-            font-weight: 600;
-            font-size: 1rem;
-            transition: all 0.3s;
-        }
-
-        .contact-form button:hover {
-            background: var(--primary-dark);
-            transform: translateY(-2px);
-            box-shadow: 0 10px 25px var(--shadow);
         }
 
         /* Footer */
@@ -576,10 +514,6 @@
                 grid-template-columns: 1fr;
             }
 
-            .contact-grid {
-                grid-template-columns: 1fr;
-            }
-
             .contact-wrapper {
                 padding: 40px 30px;
             }
@@ -620,6 +554,10 @@
 
             .timeline-item {
                 padding: 20px;
+            }
+            
+            .contact-info {
+                grid-template-columns: 1fr;
             }
         }
     </style>
@@ -745,31 +683,28 @@
         <h2 class="section-title">Kontakt</h2>
         <p class="section-subtitle">Nehmen Sie gerne Kontakt mit mir auf</p>
         <div class="contact-wrapper">
-            <div class="contact-grid">
-                <div class="contact-info">
-                    <div class="contact-item">
-                        <div class="contact-icon">📧</div>
-                        <div class="contact-details">
-                            <h3>E-Mail</h3>
-                            <p>haniallam@outlook.com</p>
-                        </div>
-                    </div>
-                    <div class="contact-item">
-                        <div class="contact-icon">📱</div>
-                        <div class="contact-details">
-                            <h3>Telefon</h3>
-                            <p>+49 15752575094</p>
-                        </div>
-                    </div>
-                    <div class="contact-item">
-                        <div class="contact-icon">📍</div>
-                        <div class="contact-details">
-                            <h3>Standort</h3>
-                            <p>Deutschland</p>
-                        </div>
+            <div class="contact-info">
+                <div class="contact-item">
+                    <div class="contact-icon">📧</div>
+                    <div class="contact-details">
+                        <h3>E-Mail</h3>
+                        <p>haniallam@outlook.com</p>
                     </div>
                 </div>
-               
+                <div class="contact-item">
+                    <div class="contact-icon">📱</div>
+                    <div class="contact-details">
+                        <h3>Telefon</h3>
+                        <p>+49 15752575094</p>
+                    </div>
+                </div>
+                <div class="contact-item">
+                    <div class="contact-icon">📍</div>
+                    <div class="contact-details">
+                        <h3>Standort</h3>
+                        <p>Deutschland</p>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
@@ -786,13 +721,6 @@
 
     <script>
         document.getElementById("year").textContent = new Date().getFullYear();
-
-        function handleSubmit(event) {
-            event.preventDefault();
-            const name = document.getElementById('name').value;
-            alert(`Vielen Dank für Ihre Nachricht, ${name}! Ich melde mich in Kürze bei Ihnen.`);
-            event.target.reset();
-        }
 
         function toggleMenu() {
             const menu = document.getElementById('navMenu');
