--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hani Allam – Lohnbuchhalter & Fachassistent Lohn und Gehalt</title>
+    <title>Hama Lohnservice – Hani Allam – Lohnbuchhalter & Fachassistent Lohn und Gehalt</title>
+
     <style>
         * {
             margin: 0;
@@ -688,14 +689,14 @@
                     <div class="contact-icon">📧</div>
                     <div class="contact-details">
                         <h3>E-Mail</h3>
-                        <p>haniallam@outlook.com</p>
+                        <p>kontakt@hama-lohnservice.de</p>
                     </div>
                 </div>
                 <div class="contact-item">
                     <div class="contact-icon">📱</div>
                     <div class="contact-details">
                         <h3>Telefon</h3>
-                        <p>+49 15752575094</p>
+                        <p>+49 15756546538</p>
                     </div>
                 </div>
                 <div class="contact-item">
