--- a/index.html
+++ b/index.html
@@ -568,7 +568,7 @@
     <!-- Navigation -->
     <nav id="navbar">
         <div class="container">
-            <a href="#" class="logo">Hani Allam</a>
+            <a href="#" class="logo">Hama Lohn service </a>
             <button class="mobile-menu-toggle" onclick="toggleMenu()">
                 <span></span>
                 <span></span>
